# sbol-torch

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  backbones.md  capabilities.md  configuration.md  data.md  extending.md
examples/: README.md  run_wandb_examples.py
examples/configs/: finetune_structure_aware.yaml  train_graph.yaml
src/sboltorch/: __init__.py  cli.py  config.py  exceptions.py  pipeline.py  reproducibility.py  types.py
src/sboltorch/data/: __init__.py  corpus.py  local.py  materialize.py  sbol_db.py  synthetic.py
src/sboltorch/datasets/: __init__.py  dataset.py  mlm_collator.py  packing.py  splits.py  streaming.py
src/sboltorch/encoders/: __init__.py  base.py  graph.py  sequence.py  structure.py
src/sboltorch/engine/: __init__.py  callbacks.py  trainer.py
src/sboltorch/models/: __init__.py  backbone.py  graph.py  mlm.py
src/sboltorch/tasks/: __init__.py  base.py  mlm.py
src/sboltorch/tokenize/: __init__.py  base.py  char.py  hf.py  kmer.py
tests/: conftest.py  test_config.py  test_engine.py  test_fixtures_sbol.py  test_graph.py  test_learning.py  test_local_corpus.py  test_materialize.py  test_mlm.py  test_resume.py  test_sbol_db_client.py  test_splits.py  test_streaming.py  test_structure.py  test_synthetic.py  test_tokenize.py  test_types.py  test_wandb.py
tests/fixtures/sbol/: COMMIT_SHA.txt  PROVENANCE.md
tests/fixtures/sbol/sbol2/: pICH44179.xml
tests/fixtures/sbol/sbol3/: BBa_F2620_PoPSReceiver.ttl  toggle_switch.nt  toggle_switch.ttl
