[project]
# Distribution name on PyPI is hyphenated (`pip install sbol-torch`); the import
# package is `sboltorch` (commonly `import sboltorch as st`).
name = "sbol-torch"
version = "0.1.0"
description = "A PyTorch library for synthetic biology and biodesign automation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mike Arpaia", email = "mike@arpaia.co" }]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.13",
    "pyarrow>=24",
    "numpy>=2.4",
    "pyyaml>=6",
    "rdflib>=7.6",
    "torch>=2.12",
    # Pin to the 4.x line: transformers 5.x breaks the custom/ESM modeling code
    # the pretrained DNA backbones (Nucleotide Transformer, DNABERT) target.
    "transformers>=4.57,<5",
    "tokenizers>=0.22",
    "einops>=0.8",
    "torch-geometric>=2.8",
    "wandb>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-mock>=3.15",
    "respx>=0.23",
    "black>=26.5",
    "isort>=8",
    "flake8>=7.3",
    "mypy>=2.1",
    "pre-commit>=4.6",
    "types-PyYAML>=6.0",
]

[project.scripts]
sboltorch = "sboltorch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sboltorch"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
# Confine first-party detection to the source tree so import grouping is
# deterministic across machines. Without this, isort's auto-detection varies by
# OS and installed packages (e.g. misclassifying wandb as first-party), making
# the same code pass on one host and fail on another.
src_paths = ["src"]
known_first_party = ["sboltorch"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src/sboltorch"]
